Fix error page by forcing min height on nav so it doesn't collapse

--- a/smoothness-weblib/src/main/resources/META-INF/resources/resources/css/smoothness.css
+++ b/smoothness-weblib/src/main/resources/META-INF/resources/resources/css/smoothness.css
@@ -62,6 +62,9 @@ h1 {
     display: inline-block;
 }
 /*Nav*/
+#primary-nav {
+    min-height: 32px;
+}
 #primary-nav ul {
     padding: 0 4px;
     list-style-type: none;
